[gd_scene load_steps=4 format=3 uid="uid://race_session"]

[ext_resource type="Script" path="res://src/racing/race_session.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://sprint_track" path="res://scenes/racing/sprint_track.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://race_hud" path="res://scenes/hud/race_hud.tscn" id="3"]

[node name="RaceSession" type="Node3D"]
script = ExtResource("1")

[node name="SprintTrack" parent="." instance=ExtResource("2")]

[node name="RaceHUD" parent="." instance=ExtResource("3")]

[node name="TrackEnvironment" type="Node3D" parent="."]

[node name="WorldEnv" type="WorldEnvironment" parent="TrackEnvironment"]
environment = SubResource("env_race")

[node name="Moonlight" type="DirectionalLight3D" parent="TrackEnvironment"]
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, 0.5, -0.5, -0.433, 0.75, 0, 50, 0)
light_color = Color(0.4, 0.45, 0.7, 1)
light_energy = 0.4
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="TrackEnvironment"]
collision_layer = 2

[node name="Mesh" type="MeshInstance3D" parent="TrackEnvironment/Ground"]
mesh = SubResource("PlaneMesh_race_ground")
material_override = SubResource("mat_ground")

[node name="Collision" type="CollisionShape3D" parent="TrackEnvironment/Ground"]
shape = SubResource("WorldBoundaryShape3D_race")

[node name="Road" type="StaticBody3D" parent="TrackEnvironment"]
collision_layer = 2

[node name="Mesh" type="MeshInstance3D" parent="TrackEnvironment/Road"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 90)
mesh = SubResource("BoxMesh_race_road")
material_override = SubResource("mat_road")

[node name="Collision" type="CollisionShape3D" parent="TrackEnvironment/Road"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 90)
shape = SubResource("BoxShape_race_road")

[node name="StreetLights" type="Node3D" parent="TrackEnvironment"]

[node name="L1" type="OmniLight3D" parent="TrackEnvironment/StreetLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 7, 0)
light_color = Color(1, 0.7, 0.4, 1)
light_energy = 2.0
omni_range = 20.0

[node name="L2" type="OmniLight3D" parent="TrackEnvironment/StreetLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 7, 50)
light_color = Color(1, 0.7, 0.4, 1)
light_energy = 2.0
omni_range = 20.0

[node name="L3" type="OmniLight3D" parent="TrackEnvironment/StreetLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 7, 100)
light_color = Color(1, 0.7, 0.4, 1)
light_energy = 2.0
omni_range = 20.0

[node name="L4" type="OmniLight3D" parent="TrackEnvironment/StreetLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 7, 150)
light_color = Color(1, 0.7, 0.4, 1)
light_energy = 2.0
omni_range = 20.0

[node name="Neon1" type="OmniLight3D" parent="TrackEnvironment/StreetLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 5, 70)
light_color = Color(1, 0, 0.4, 1)
light_energy = 3.0
omni_range = 12.0

[node name="Neon2" type="OmniLight3D" parent="TrackEnvironment/StreetLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 5, 130)
light_color = Color(0, 1, 0.8, 1)
light_energy = 3.0
omni_range = 12.0

[node name="ResultsUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="ResultsUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="VBoxContainer" parent="ResultsUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="ResultsUI/Panel"]
layout_mode = 2
text = "RACE COMPLETE"
horizontal_alignment = 1

[node name="Position" type="Label" parent="ResultsUI/Panel"]
layout_mode = 2
text = "1ST"
horizontal_alignment = 1

[node name="Time" type="Label" parent="ResultsUI/Panel"]
layout_mode = 2
text = "0:00.000"
horizontal_alignment = 1

[node name="Cash" type="Label" parent="ResultsUI/Panel"]
layout_mode = 2
text = "+$500"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="ResultsUI/Panel"]
layout_mode = 2
text = "CONTINUE"

[sub_resource type="ProceduralSkyMaterial" id="sky_mat_race"]
sky_top_color = Color(0.02, 0.01, 0.06, 1)
sky_horizon_color = Color(0.08, 0.03, 0.15, 1)
ground_bottom_color = Color(0.02, 0.01, 0.04, 1)

[sub_resource type="Sky" id="sky_race"]
sky_material = SubResource("sky_mat_race")

[sub_resource type="Environment" id="env_race"]
background_mode = 2
sky = SubResource("sky_race")
ambient_light_source = 1
ambient_light_color = Color(0.08, 0.05, 0.15, 1)
ambient_light_energy = 0.3

[sub_resource type="PlaneMesh" id="PlaneMesh_race_ground"]
size = Vector2(200, 400)

[sub_resource type="StandardMaterial3D" id="mat_ground"]
albedo_color = Color(0.08, 0.06, 0.1, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_race"]

[sub_resource type="BoxMesh" id="BoxMesh_race_road"]
size = Vector3(14, 0.05, 220)

[sub_resource type="BoxShape3D" id="BoxShape_race_road"]
size = Vector3(14, 0.05, 220)

[sub_resource type="StandardMaterial3D" id="mat_road"]
albedo_color = Color(0.15, 0.15, 0.18, 1)
roughness = 0.9
